# GH_mcp_server

./: .env  .env.example  LICENSE  README.md  main.py  pyproject.toml  run_server.py
examples/: compute_line.py  rhinopython.py  test01.3dm  test01.3dm.rhl  test01.3dmbak  test01.gh  test02.gh  test03.gh  test_CL_GH.py  test_CodeListener.py  test_GH.py  test_rhino3dm.3dm  test_rhino3dm.3dm.rhl  test_rhino3dm.3dmbak  test_rhino3dm.py  zaha01.py
grasshopper_mcp/: config.py  server.py
grasshopper_mcp/prompts/: grasshopper_prompts.py  templates.py
grasshopper_mcp/resources/: model_data.py
grasshopper_mcp/rhino/: connection.py
grasshopper_mcp/tools/: advanced_grasshopper.py  analysis.py  grasshopper.py  modeling.py  rhino_code_gen.py
grasshopper_mcp/utils/: request.py
scripts/: install.py
